# GTfyp

./: .gitignore  README.md  app.py  plotting.py  point_cloud_test.csv  pyproject.toml  requirements.txt  sim.py  streamlit_gui.py
.github/workflows/: django.yml
backend/: Dockerfile  manage.py  requirements.txt
backend/backend/: settings.py  views.py
example_code/: demo.py  example.py
java_test/: Main.java
latex_doc/: delta_H_derivation.fdb_latexmk  delta_H_derivation.fls  delta_H_derivation.tex  fokker_planck_derivation.fdb_latexmk  fokker_planck_derivation.fls  fokker_planck_derivation.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  ref.bib
latex_doc/final_report/: report.bib  report.tex
latex_doc/images/: column_case_delta_H.eps  column_cloud.eps  critNlog.eps  disk_case_delta_H.eps  disk_cloud.eps  drift_4.eps  drift_cases.eps  drift_cases_shaded.eps  large_N_case.eps  large_N_cloud.eps  large_N_delta_H.eps  low_n_case.eps  moran_reversal.eps  rod_case_n_300.eps  rod_larger_inset.eps  w_test.eps
latex_doc/parameter_tests/: beta_test.eps  crit_n_beta.eps  crit_n_gamma.eps  fixed_gamma_parameter.eps  fixed_n_gamma_beta.eps
latex_doc/short_report/: report.bib  report.tex
results/: moran400_100000.csv
simulation/: sim.py
source/: Dockerfile  README.md  manage.py  requirements.txt
source/backend/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
source/replicator/: __init__.py  augRps.py  aug_rps.py  pdRepl.py  rpsRepl.py
source/simulation/: __init__.py  games.py  plotting.py  sim.py  simulation.md
(+313 files in other folders)
