[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfyp-sim"
version = "0.1.0"
description = "Simulation + replicator modules extracted from GTfyp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "numba",
  "tqdm",
  "scienceplots",
  "python-ternary"
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
include = ["simulation*", "replicator*"]
exclude = ["backend*", "__pycache__*"]